# lava

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  NOTES.txt  README.md  RODE0DAY.md  SETUP.md  VERSION.md  angr_concolic_explore.py  build.sh  host.json.example  init-host.py  init-project.py  init_host.py  install.sh  lava  lava_template.json  makefile.fixup  pyproject.toml  requirements.txt  setup.py  setup_container.py  setup_container.sh  setup_postgres.py  try.sh
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report_general.md  feature_request.md
.github/workflows/: build.yml  labeler.yml  parallel_tests.yml  publish_docker.yml
Stringcopy/: Makefile  Stringcopy.cpp
automate/: actuate.py  queries.sh
btrace/: compile.sh  sw-btrace  sw-btrace-to-compiledb
chal/chal_elfparser/: buildconst.sh  constrain  constrain.c  elfparser  elfparser_orig  (+9 more)
common/: lavaDB.cpp
corpora/: README.md  test.tek
covbugs/: .gitignore  README.md  add_covbugs.py  cov.sh  parse_cov.py
ddslots_plugin/: config.panda
dependencies/: README.md  ubuntu_20.04_build.txt  ubuntu_22.04_base.txt  ubuntu_22.04_build.txt
docker/: Dockerfile  rebuild-notes  requirements.txt  sources.list
docs/: DeadData.md  RODE0DAY.md  creating-a-target  db_enums.md  delete_dua.txt  fuzz.sql  how-to-lava  how-to-lava.md  setup.md
fbi/: -.s  Makefile  compile.sh  fbi-src-fix  find_bug_inj.cpp  help  spit.hxx  tags
include/: lava.hxx  lava_bugs.h  panda_hypercall_struct.h  pgarray.hxx  pirate_mark_lava.h
panda/: Makefile  dwarfdump.py  find_bug_inj.cpp  lava_find_avail_dead_data.c  setup.sh
paper1/: Makefile  ack.tex  afl_summary.tsv  altdesign.tex  biblio.bib  conclusion.tex  coverity.csv  coverity_defects.csv  examples.pptx  fbi.txt  fib.py  future.tex  implementation.tex  inj-example-attack.c  inj-example-dua-siphon.c  lava-arch.pptx  motivation.tex  overview.tex  paper.tex  relwork.tex  results.tex  scope.tex  tcn.pptx  trace-dua-atp.pptx  worked-example.pptx  worked-example2.pptx  worked_example.c
patches/: gold-2.26.1.patch
pylava/: pyproject.toml  setup.py
python/: .gitignore  README.md  pyproject.toml  setup.py
python/pyraflow/: angr_concolic_explore.py  coverage.py  lava_explore.py  utils.py
python/src/pyroclastic/: __main__.py  lava.py
python/src/pyroclastic/add_queries/: add_queries.py  fninstr.py  get_c_files.py  sw-btrace-to-compiledb.py
python/src/pyroclastic/data/: makefile.fixup
python/src/pyroclastic/inject/: dataflow.py  generate_bugs.py  inject.py  process_compile_commands.py
python/src/pyroclastic/magmalyze/: KLEERandomSearch.py  README.md  angr_concolic_explore.py  coverage.py  deploy.py  utils.py
python/src/pyroclastic/sanitize/: dataflow.py
python/src/pyroclastic/taint/: bug_mining.py  find_bug_injection.py  generate_bugs.py
python/src/pyroclastic/utils/: database_types.py  funcs.py  init-host.py  init_host.py  sw_btrace_to_compiledb.py  vars.py
python/tests/: test_explore.py  test_schema.py  test_toy.py
scripts/: *Backtrace*  actuate.py  add_if_braces.py  add_if_braces_test.c  add_queries.sh  arg_parse.sh  asidstory  bug_mining.py  build_docker.py  bump_version.sh  competition.py  competition.py.save  competition.sh  competition_autotools.py  composite.py  database_types.py  dataflow.py  db_spelunk.py  demo.py  docker-shell-prod.sh  docker-shell.sh  docker-shell.sh.save  dua_atp_analysis_gdb.py  everything.sh  file.libs  fileLavaScript.sh  find_bug_injection.py  fninstr.py  foo  foo.yaml  foo~  funcs.sh  generate_schema.py  get-clang.sh  get-fns.py~  inject.py  inject.py.blacklist  inject.py.blacklist~  inject.sh  kw-analysis.py  (+30 more)
sql/: fuzz.sql  lava.sql  lava_sql.cpp
src_clang/: .gitignore  ApplyReplacements.cpp  AttackPoints.cpp  ClangApplyReplacementsMain.cpp  Makefile  a.out  attackPoints.cpp  blah.yaml  compile-on-docker.sh  example.cpp  foo  foo.fn  foo.fn~  function_vett.cpp~  get_c_files.py  includes.h  lavaDB.cpp  lavaDB.h  lavaFirstStage.cpp  lavaFnTool.cpp  lavaFnTool.cpp~  lavaInsertBugTool.cpp  lavaTaintQuery.h  lavaTaintQueryPlugin.cpp  lavaTaintQueryTool.cpp  lavaThirdStage.cpp  lavaTool.cpp  lavaTool.cpp.sav  lava_set.c  lexpr.hxx  omg.cpp  omg.h  oof  panda_hypercall_struct.h  pirate_mark_lava.h  taintQuery.cpp  taintQuery.h  taintQueryPlugin.cpp  taintQueryTool.cpp  test-compile-on-docker.sh  (+3 more)
target_bins/: .gitattribute  README.md  libjpeg-9c-pre-m32.tgz
tests/: .gitignore  TESTING.md  fn_ptrs.c  struct.c  test.sh  test_all.sh  test_fns.sh  va_args.c  validate_all.sh
tools/: CMakeLists.txt  CPackConfig.txt
tools/btrace/: CMakeLists.txt  btrace.c  btrace_linux.c  compile.sh  sw-btrace  sw-btrace-to-compiledb  sw-btrace64
tools/duasan/src/: CMakeLists.txt  duasan.cpp
tools/fbi/: .gitignore  CMakeLists.txt
tools/fbi/src/: CMakeLists.txt  find_bug_inj.cpp
tools/include/: hypercall.h  lava_version.h.in  pirate_mark_lava.h
tools/lavaDB/include/: lavaDB.h
tools/lavaDB/src/: CMakeLists.txt  lavaDB.cpp
tools/lavaODB/include/: lava.hxx  lexpr.hxx  pgarray.hxx  spit.hxx  vector_set.hxx
tools/lavaODB/src/: CMakeLists.txt  lava.proto
tools/lavaTool/: .gitignore  CMakeLists.txt  compile-on-docker.sh  get_c_files.py  lavaInitTool.cpp  test-compile-on-docker.sh
tools/lavaTool/_tests/torture/: compile_commands.json.example
tools/lavaTool/include/: CallExprArgAdditionalHandler.h  ChaffFuncDeclArgAdditionHandler.h  FieldDeclArgAdditionHandler.h  FuncDeclArgAdditionHandler.h  FuncDuplicationHandler.h  FunctionArgHandler.h  FunctionPointerFieldHandler.h  FunctionPointerTypedefHandler.h  Insertions.h  LavaMatchHandler.h  MallocOffByOneArgHandler.h  MatchFinder.h  MemoryAccessHandler.h  Modifier.h  PriQueryPointHandler.h  ReadDisclosureHandler.h  VarDeclArgAdditionHandler.h  lavaTool.h  omg.h
tools/lavaTool/src/: CMakeLists.txt  lavaCovBugs.cpp  lavaCovBugsLoc.cpp  lavaFnTool.cpp  lavaInitTool.cpp  lavaTool.cpp  omg.cpp  omg.cpp.orig
tools/lavaTool/tests/: .gitignore  host_fninstr.sh  nntest.cpp  run.sh
tools/lavaTool/tests/evil/: compile_commands.json.example
(+153 files in other folders)
