[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts", "scripts.*"]

[tool.setuptools.package-data]
# This explicitly attaches the ODB files ONLY to the 'generated' sub-package
"scripts" = ["*.cxx", "*.hxx", "*.ixx", "*.sql"]

[project]
name = "pyroclastic"
dynamic = ["version"]
description = "Python Interface for LAVA"
readme = "README.md"
authors = [
    { name = "Andrew Quijano", email = "andrew.quijano@nyu.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "dotenv",
    "colorama",
    "db",
    "ipython",
    "lockfile",
    "numpy",
    "pandare==1.8.78",
    "PyYAML",
    "SQLAlchemy",
    "tabulate",
    "psycopg2-binary",
    "ijson"
]
license = "GPL-2.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
[project.urls]
Homepage = "https://github.com/panda-re/lava"
Source = "https://github.com/panda-re/lava"
Tracker = "https://github.com/panda-re/lava/issues"